# star-field-image-simulator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
src/star_field_image_simulator/data/: hipparcos_2_star_catalog_matlab_matrix.mat  star_catalog.db
src/star_field_image_simulator/image_generation/: canvas_computation.py  canvas_computation_non_integrated.py  constants.py  data_manipulation.py
src/star_field_image_simulator/noise_addition/: noise_addition.py
tests/data/: sc_no_loop.db  sc_northpole.db  sc_southpole.db  sc_with_loop.db  test_star_catalog.db
tests/image_generation/: constants.py  test_add.py  test_celestial2image.py  test_create_stars.py  test_fetch_stars.py  test_foo.py  test_star_add_remove.py  test_stars.py
