[metadata]
name = star-field-image-simulator
description = A simulator that generates star field images based from a star catalogue
author = Pio Mendoza
# license = GNU General Public License v3.0
# icense_file = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    star_field_image_simulator
install_requires =
    matplotlib>=3.4
    numpy>=1.21
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 100
