[metadata]
name = star-field-image-simulator
version = 0.0.0
description = A simulator that generates star field images based from a star catalogue
url = https://github.com/peeeyow/star-field-image-simulator
author = Pio Mendoza
author_email = pio.lauren.mendoza@gmail.com
# license = GNU General Public License v3.0
# icense_file = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
packages = find:
install_requires =
    matplotlib>=3.4
    numpy>=1.21
python_requires = >=3.9
zip_safe = no

[options.package_data]
star_field_image_simulator = 
    data/*.db
    py.typed

[options.packages.find]
where = src
exclude = 
    tests*
    testing*

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    black>=21.9

[flake8]
max-line-length = 100
